# safe-nav-locomotion

./: .gitignore  README.md
drake_Motion_Planner/slugs_runner/: BUILD.bazel  single_letter.slugsin  slugs_interface.cc  slugs_interface.h  traffic.slugsin
motion_planner/drake/examples/athena_cassie/: BUILD.bazel  athena joint information  athena_cassie.cc  athena_cassie.h  athena_cassie_common.cc  athena_cassie_common.h  athena_cassie_lcm.cc  athena_cassie_lcm.h  athena_cassie_position_publisher.cc  athena_cassie_torque_controller.cc  athena_cassie_torque_controller.h  run_athena_cassie_follow.cc
motion_planner/drake/examples/athena_cassie/lists/: .tlog_r_foot.txt  log_box.txt  log_box1.txt  log_box2.txt  log_heading.txt  log_heading_box1.txt  log_heading_box2.txt  log_heading_quadrotor.txt  log_l_foot_2.txt  log_l_wrist.txt  log_l_wrist_2.txt  log_obstacle2.txt  log_quadrotor.txt  log_r_foot_2.txt  log_r_wrist.txt  log_r_wrist_2.txt
motion_planner/drake/examples/athena_cassie/models/: KneedCompassGait.urdf  box.urdf  box1.urdf  box2.urdf  cassie_with_athena.urdf  cassie_with_athena_intermediate.urdf  cassie_with_athena_new.urdf  environment_floor_1.sdf  forklift.urdf  hand_cart.urdf  single_box.urdf  upperbody_noinertial.urdf
motion_planner/drake/examples/athena_cassie/robot/: BUILD.bazel  athena_cassie_command_receiver.cc  athena_cassie_command_receiver.h  athena_cassie_command_sender.cc  athena_cassie_command_sender.h  athena_cassie_constants.cc  athena_cassie_constants.h  athena_cassie_status_receiver.cc  athena_cassie_status_receiver.h  athena_cassie_status_sender.cc  athena_cassie_status_sender.h
motion_planner/drake/examples/cassie/: BUILD.bazel  README.md  cassie.cc  cassie.h  cassie_lcm.cc  cassie_lcm.h  cassie_position_publisher.cc  cassie_turtle.cc  run_cassie_follow.cc  run_cassie_follow_turtle.cc
motion_planner/drake/examples/cassie/lists/: log_COM.txt  log_heading.txt  log_l_foot.txt  log_obstacle.txt  log_r_foot.txt
motion_planner/drake/examples/cassie/models/: cart1.urdf  cart2.urdf  cassie_active_ankle.urdf  cassie_fixed_springs.urdf  cassie_nl.urdf  cassie_soft_spring.urdf
motion_planner/drake/examples/cassie/old_cassie_folder/: BUILD.bazel  CassieIKtest.cc  cassie.cc  cassie.h  run_cassie_follow.cc
motion_planner/drake/examples/cassie/robot/: BUILD.bazel  cassie_command_receiver.cc  cassie_command_receiver.h  cassie_command_sender.cc  cassie_command_sender.h  cassie_constants.cc  cassie_constants.h  cassie_status_receiver.cc  cassie_status_receiver.h  cassie_status_sender.cc  cassie_status_sender.h
motion_planner/drake/examples/collaboration_station/: BUILD.bazel  README.md  collaboration_station.cc  collaboration_station.h  move_robots.cc  object.cc  object.h  object_lcm.cc  object_lcm.h  object_position_publisher.cc  robot_time_sender.cc  robot_time_sender.h  run_station.sh  simulation_visualizer.cc  simulation_visualizer_2.cc
motion_planner/drake/examples/collaboration_station/dead_cassie_code/: cassie_run_dynamics.cc  cassie_simulation.cc  cassie_visualizer.cc  simulation.cc  visualizer.cc
motion_planner/drake/examples/collaboration_station/kuka/: BUILD.bazel  high_level_planner.cc  high_level_planner.h  high_level_planner_1.cc  high_level_planner_2.cc  high_level_planner_2.h  high_level_planner_3.cc  high_level_planner_3.h  iiwa_position_publisher.cc  kuka_position_publisher.cc  kuka_position_publisher_1.cc  kuka_position_publisher_2.cc  kuka_position_publisher_3.cc  move_iiwa_ee.cc  move_iiwa_ee_1.cc  move_iiwa_ee_2.cc  move_iiwa_ee_3.cc
motion_planner/drake/examples/collaboration_station/lists/: log_iiwa_2_use.txt  log_step_1_use.txt  log_step_2_use.txt  log_step_3_use.txt  log_wsg_1_use.txt  log_wsg_2_use.txt  log_wsg_3_use.txt
motion_planner/drake/examples/collaboration_station/models/: 061_foam_brick.sdf  assortment_crate.urdf  big_robot_toy.urdf  cat.sdf  charging_station.sdf  charging_station_2.sdf  environment_floor_1.2.sdf  environment_floor_1.sdf  environment_floor_2.1.sdf  environment_floor_2.sdf  multi_object.urdf  multi_object_2.urdf  multi_static_boxes.urdf  multi_static_boxes2.urdf  (+7 more)
motion_planner/drake/manipulation/cassie/: BUILD.bazel  cassie_command_receiver.cc  cassie_command_receiver.h  cassie_command_sender.cc  cassie_command_sender.h  cassie_constants.cc  cassie_constants.h  cassie_status_receiver.cc  cassie_status_receiver.h  cassie_status_sender.cc  cassie_status_sender.h
motion_planner/drake/safe-nav-loco/: BUILD.bazel  T_step.txt  fhws2_2.txt  log_COM.txt  log_apextraj.txt  log_delta.txt  log_heading.txt  log_l_foot.txt  log_obstacle.txt  log_p_foot.txt  log_psp.txt  log_r_foot.txt  log_step.txt  log_switch.txt  shws2_2.txt
motion_planner/drake/safe-nav-loco/include/: beliefIOParser.h  cassie.h  phase_space_planner.h
motion_planner/drake/safe-nav-loco/model/: CDC_environment.sdf  cart.urdf  cart1.urdf  cassie.urdf  cassie_active_spring.urdf  iiwa7_no_world_joint.urdf  iros_env.sdf  jrnl_environment.sdf  kuka2.urdf  kuka3.urdf  quadrotor3.urdf  quadrotor4.urdf
motion_planner/drake/safe-nav-loco/specification/: taskPlanner.slugsin
motion_planner/drake/safe-nav-loco/src/: beliefIOParser.cc  cassie.cc  data_walk_pipms_TAMP.mat  phase_space_planner.cc  reach_ctlr.py  run_cassie_follow.cc  simulate_psp.cc  simulate_psp_lcm.cc  simulate_psp_lcm_perturb.cc  slugs_interface.cc  ugrid.mat
motion_planner/drake/safe-nav-loco/vis/: T_step.txt  actions_CDC_Sub.json  log_COM_v3.txt  log_COM_v45.txt  log_COM_v6.txt  log_apex (copy).txt  log_apex.txt  log_apextraj.txt  log_d.txt  log_d_og.txt  log_delta.txt  log_heading.txt  log_obstacle.txt  log_p_foot.txt  log_p_foot_v3.txt  log_p_foot_v45.txt  log_p_foot_v6.txt  log_psp.txt  log_psp_37.txt  log_psp_NB_widestep.txt  log_psp_NB_widestep1.txt  log_psp_NB_widestep2.txt  log_psp_NB_widestep3.txt  log_psp_highw2sq.txt  log_psp_highw2sq_v25.txt  log_psp_highw2sq_v25_1.txt  log_psp_step5_n3.txt  log_psp_step5_slow_turn.txt  log_psp_widestep.txt  log_psp_y14_y24_ct8_csw2_vlim25.txt  log_step.txt  log_switch.txt  log_waypoint.txt  vis_dev.py  vis_psp.py  vis_psp_dev.py
(+501 files in other folders)
