# -*- python -*-

load(
    "@drake//tools/skylark:drake_cc.bzl",
    "drake_cc_binary",
    "drake_cc_googletest",
    "drake_cc_library",
)

package(
    default_visibility = [":__subpackages__"],
)


drake_cc_library(
    name = "slugs_interface",
    srcs = [
        "slugs_interface.cc",
    ],
    hdrs = [
        "slugs_interface.h",
    ],
    visibility = ["//visibility:public"],
)


drake_cc_binary(
    name = "slugs_runner",
    srcs = ["main.cc"],
    deps = [
        "//slugs_runner:slugs_interface"
    ],
)

