load(
    "@drake//tools/skylark:drake_cc.bzl",
    "drake_cc_binary",
    "drake_cc_library",
)
load("//tools/install:install_data.bzl", "install_data")

package(
    default_visibility = [":__subpackages__"],
)

drake_cc_library(
    name = "athena_cassie",
    srcs = ["athena_cassie.cc"],
    hdrs = [
        "athena_cassie.h",
    ],
    data = [":models"],
    visibility = ["//visibility:public"],
    deps = [
        "//common:default_scalars",
        "//common:essential",
        "//common:find_resource",
        "//systems/framework",
        "//systems/analysis",
        "//multibody/plant",
        "//multibody/parsing",
        "//multibody/inverse_kinematics",
        "//solvers:constraint",
        "//solvers:gurobi_qp",
        "//solvers:gurobi_solver",
        "//solvers:mathematical_program",
        "//solvers:mathematical_program_result",
        "//solvers:osqp_solver",
        "//solvers:solve",
    ],
)

drake_cc_library(
    name = "athena_cassie_common",
    srcs = [
        "athena_cassie_common.cc",
    ],
    hdrs = [
        "athena_cassie_common.h",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//common:find_resource",
        "//common/trajectories:piecewise_polynomial",
        "//examples/athena_cassie/robot:athena_cassie_constants",
        "//manipulation/util:robot_plan_utils",
        "@lcmtypes_bot2_core",
        "@lcmtypes_robotlocomotion",
    ],
)

drake_cc_library(
    name = "athena_cassie_lcm",
    srcs = ["athena_cassie_lcm.cc"],
    hdrs = ["athena_cassie_lcm.h"],
    visibility = ["//visibility:public"],
    deps = [
        "//examples/athena_cassie/robot",
    ],
)

drake_cc_binary(
    name = "run_athena_cassie_follow",
    srcs = ["run_athena_cassie_follow.cc"],
    data = [
        ":models",
    ],
    deps = [
        ":athena_cassie",
        "//common:add_text_logging_gflags",
        "//common:find_resource",
        "//geometry:geometry_visualization",
        "//multibody/parsing",
        "//systems/analysis:simulator",
        "//systems/analysis:simulator_gflags",
        "//systems/framework:diagram",
        "//systems/rendering:multibody_position_to_geometry_pose",
        "@gflags",
        "@jsoncpp",
    ],
)

cc_binary(
    name = "athena_cassie_position_publisher",
    srcs = ["athena_cassie_position_publisher.cc"],
    data = [
        ":models",   
        "//examples/collaboration_station",     
   
    ],  
    deps = [
        "@gflags",
        "@jsoncpp",
        "//examples/cassie:cassie_lcm",
        "//common:default_scalars",
        "//common:essential",
        "//common:add_text_logging_gflags",
        "//common:find_resource",
        "//geometry:geometry_visualization",
        "//lcm",
        "//lcmtypes:object",
        "//lcmtypes:object_target",
	"//lcmtypes:start_time",
        "//math:geometric_transform",
        "//multibody/inverse_kinematics",
        "//multibody/parsing",
        "//multibody/plant",
        "//multibody/plant:contact_results_to_lcm",
        "//solvers:constraint",
        "//solvers:gurobi_qp",
        "//solvers:gurobi_solver",
        "//solvers:mathematical_program",
        "//solvers:mathematical_program_result",
        "//solvers:osqp_solver",
        "//solvers:solve",
        "//systems/analysis:simulator",
        "//systems/analysis:simulator_gflags",
        "//systems/framework:diagram",
        "//systems/primitives:constant_vector_source",
        "//systems/primitives:demultiplexer",
        "//systems/primitives:discrete_derivative",
        "//systems/primitives:subvector_pass_through",
        "//systems/rendering:multibody_position_to_geometry_pose",

    ],
)

drake_cc_library(
    name = "athena_cassie_torque_controller",
    srcs = ["athena_cassie_torque_controller.cc"],
    hdrs = ["athena_cassie_torque_controller.h"],
    visibility = ["//visibility:public"],
    deps = [
        "//multibody/plant",
        "//systems/controllers:inverse_dynamics",
        "//systems/controllers:pid_controller",
        "//systems/controllers:state_feedback_controller_interface",
        "//systems/framework:diagram_builder",
        "//systems/framework:leaf_system",
        "//systems/primitives:adder",
        "//systems/primitives:pass_through",
    ],
)

install_data()
