# -*- python -*-
# This file contains rules for Bazel; see drake/doc/bazel.rst.

load(
    "@drake//tools/skylark:drake_cc.bzl",
    "drake_cc_binary",
    "drake_cc_googletest",
    "drake_cc_library",
)
load(
    "@drake//tools/skylark:drake_py.bzl",
    "drake_py_binary",
    "drake_py_library",
)

load("@drake//tools/skylark:test_tags.bzl", "vtk_test_tags")
load("//tools/install:install_data.bzl", "install_data")
load("//tools/lint:lint.bzl", "add_lint_tests")
load("//tools/skylark:test_tags.bzl", "vtk_test_tags")


drake_cc_library(
    name = "cassie_lcm",
    srcs = ["cassie_lcm.cc"],
    hdrs = ["cassie_lcm.h"],
    visibility = ["//visibility:public"],
    deps = [
        "//manipulation/cassie",
    ],
)

drake_cc_library(
    name = "cassie",
    srcs = ["cassie.cc"],
    hdrs = [
        "cassie.h",
    ],
    data = [":models"],
    visibility = ["//visibility:public"],
    deps = [
        "//common:default_scalars",
        "//common:essential",
        "//common:find_resource",
        "//systems/framework",
        "//systems/analysis",
        "//multibody/plant",
        "//multibody/parsing",
        "//multibody/inverse_kinematics",
        "//solvers:constraint",
        "//solvers:gurobi_qp",
        "//solvers:gurobi_solver",
        "//solvers:mathematical_program",
        "//solvers:mathematical_program_result",
        "//solvers:osqp_solver",
        "//solvers:solve",
    ],
)

drake_cc_binary(
    name = "run_cassie_follow",
    srcs = ["run_cassie_follow.cc"],
    data = [
        ":models",
    ],
    deps = [
        ":cassie",
        "//common:add_text_logging_gflags",
        "//common:find_resource",
        "//geometry:geometry_visualization",
        "//multibody/parsing",
        "//systems/analysis:simulator",
        "//systems/analysis:simulator_gflags",
        "//systems/framework:diagram",
        "//systems/rendering:multibody_position_to_geometry_pose",
        "@gflags",
    ],
)

install_data()

add_lint_tests()
