# -*- python -*-

load(
    "@drake//tools/skylark:drake_cc.bzl",
    "drake_cc_googletest",
    "drake_cc_library",
    "drake_cc_package_library",
)
load("//tools/lint:lint.bzl", "add_lint_tests")

package(
    default_visibility = ["//visibility:public"],
)

drake_cc_package_library(
    name = "objects",
    deps = [
        # ":object_command_receiver",
        # ":object_command_sender",
        ":object_constants",
        ":object_status_receiver",
        ":object_status_sender",
    ],
)

drake_cc_library(
    name = "object_constants",
    srcs = ["object_constants.cc"],
    hdrs = ["object_constants.h"],
    deps = [
        "//common:essential",
    ],
)

# drake_cc_library(
#     name = "object_command_receiver",
#     srcs = ["object_command_receiver.cc"],
#     hdrs = ["object_command_receiver.h"],
#     deps = [
#         ":object_constants",
#         "//common:essential",
#         "//lcmtypes:lcmtypes_drake_cc",
#         "//systems/framework:leaf_system",
#         "//systems/lcm:lcm_pubsub_system",
#     ],
# )

# drake_cc_library(
#     name = "object_command_sender",
#     srcs = ["object_command_sender.cc"],
#     hdrs = ["object_command_sender.h"],
#     deps = [
#         ":object_constants",
#         "//common:essential",
#         "//lcmtypes:lcmtypes_drake_cc",
#         "//systems/framework:leaf_system",
#     ],
# )

drake_cc_library(
    name = "object_status_receiver",
    srcs = ["object_status_receiver.cc"],
    hdrs = ["object_status_receiver.h"],
    deps = [
        ":object_constants",
        "//common:essential",
        "//lcmtypes:lcmtypes_drake_cc",
        "//systems/framework:leaf_system",
    ],
)

drake_cc_library(
    name = "object_status_sender",
    srcs = ["object_status_sender.cc"],
    hdrs = ["object_status_sender.h"],
    deps = [
        ":object_constants",
        "//common:essential",
        "//lcmtypes:lcmtypes_drake_cc",
        "//systems/framework:leaf_system",
    ],
)

add_lint_tests()
